--- a/src/components/task/assets/task-style.scss
+++ b/src/components/task/assets/task-style.scss
@@ -1,28 +1,16 @@
-$width : 300px;
-
-.input {
-  max-width: $width;
-}
 
 .task-name-input {
   border: none;
-}
-
-.task-name-input:hover {
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-}
-
-.task-name-input:focus {
-  border: none;
+  &:hover {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
+  }
+  &:focus {
+    border: none;
+  }
 }
 
 .task-list{
   margin-top: 20px;
-}
-
-article {
-  max-width: 460px;
-  margin: auto;
 }
