--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,10 +12,29 @@ article {
   margin: auto;
 }
 
+.footer {
+  position:fixed;
+  bottom:0;
+  width:100%;
+  height:70px;   /* Height of the footer */
+  background:#a8a8a8;
+  padding: 0 0 0 0 ;
+
+}
+
 .heading {
   font-size: 20px;
 }
 
 .input {
   max-width: $standard-input-width;
+}
+
+.footer-button {
+  height: 70px;
+  width: 25%;
+}
+
+.is-selected {
+  background-color: green;
 }
