--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -44,3 +44,10 @@ article {
 .message-header {
   margin: 0 0 0 0
 }
+
+
+table {
+  text-align: center;
+  margin: 0px auto;
+  margin-top: 30px;
+}
