--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -19,7 +19,6 @@ article {
   height:70px;   /* Height of the footer */
   background:#a8a8a8;
   padding: 0 0 0 0 ;
-
 }
 
 .heading {
@@ -32,14 +31,14 @@ article {
 
 .footer-button {
   height: 70px;
-  width: 25%;
+  width: 50%;
+  margin: auto;
 }
 
 .is-selected {
   background-color: green;
   color: black;
 }
-
 
 .message-header {
   margin: 0 0 0 0
