--- a/src/assets/scss/vendor.scss
+++ b/src/assets/scss/vendor.scss
@@ -1,2 +1,3 @@
 @import "../../../node_modules/bulma/css/bulma";
 @import "../../../node_modules/flatpickr/dist/flatpickr";
+// @import '../../../node_modules/font-awesome/scss/font-awesome';
