--- a/src/components/calendar/assets/calendar.scss
+++ b/src/components/calendar/assets/calendar.scss
@@ -3,48 +3,30 @@
   height: auto;
 }
 
-.full-calendar-header {
-  width: 520px;
-}
-
-.dates {
-  height: 40px;
-}
-.header-left {
-  width: 0px;
-}
-.header-right {
-  width: 0px;
-}
-.header-center {
-  width: 10px;
-}
 .header-center span{
-  font-size: 13px;
-}
-
-.events-day {
-  min-height: 50px;
+  font-size: 20px;
 }
 
 .full-calendar-body .dates .week-row .day-cell {
-    flex: 1;
-    min-height: 50px;
-    padding: 4px;
-    border-right: 1px solid #e0e0e0;
-    border-bottom: 1px solid #e0e0e0;
+  min-height: 50px;
+  padding: 4px;
 }
 
 .full-calendar-body .dates .dates-events .events-week .events-day {
-    cursor: pointer;
-    flex: 1;
-    min-height: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  cursor: default;
+  min-height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
-.calendar-box {
-  width: 90%;
-  display: table;
-  height: 450px;;
+.full-calendar-body .dates .dates-events .events-week .events-day .event-box .event-item.is-start {
+  cursor: pointer;
+  margin-left : 1px;
+  margin-right : 1px;
+  margin-bottom : 2px;
+  margin-left : 1px;
+}
+
+.full-calendar-body .weeks .week {
+  background-color: #e9f9d9;
 }
