--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -55,3 +55,20 @@ article {
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.columns{
+
+  padding: 5px;
+}
+
+.column-to-do{
+  background-color: black;
+}
+
+.column-in-progress{
+  background-color: black;
+}
+
+.column-completed{
+  background-color: black;
+}
